# dots-lv-network-service

./: Dockerfile  LineCode.dss  README.md  XFMRCode.dss  main.dss  mvnetwork.dss  pyproject.toml  requirements.txt  smalexample.dss  trafo13_lvnetwork3_1_Line_lv_cable_trafo13_lvnetwork3_2_main_grid_V.DSV  trafo13_lvnetwork3_1_Losses.Txt
.github/workflows/: publish-image.yml  python-app.yml
pgm_test/: Trafo-types.xlsx  XFMRCode.dss  mv-energy-system.dss  out.json  pgm_test.py  test.py
resources/: Loadflow.py
src/ExampleCalculationService/: EConnection.py
src/lvnetworkservice/: XFMRCode.dss  esdl_parser.py  lvnetworkservice.py
test/: LineCode.dss  Main.dss  TestESDL_1_Power_seq_kVA.txt  TestESDL_1_Transformer_transformer1_PQ.DSV  TestLVNetworkService.py  TestTemplate.py  To-look-at-0.3_1_Line_lv_cable_trafo11_lvnetwork1_to_home_1_arch3_PQ.DSV  To-look-at-0.3_1_Line_lv_cable_trafo11_lvnetwork1_to_home_1_arch3_V.DSV  To-look-at-0.3_1_Line_lv_cable_trafo12_lvnetwork2_to_home_11_arch3_PQ.DSV  To-look-at-0.3_1_Line_lv_cable_trafo1_lvnetwork1_15_main_grid_PQ.DSV  To-look-at-0.3_1_Line_mv_cable267_PQ.DSV  To-look-at-0.3_1_Line_mv_cable267_V.DSV  To-look-at-0.3_1_Transformer_highvoltagetrafo_PQ.DSV  To-look-at-0.3_1_Transformer_transformer73_PQ.DSV  XFMRCode.dss  notes.txt  opendssdirecttest.py  test.dss  test.esdl  trafo1_lvnetwork1.dss  trafo1_lvnetwork9.esdl
test/networks/: LineCode.dss  main.dss  mv-energy-system.dss  trafo10_lvnetwork0.dss  trafo10_lvnetwork0.esdl  trafo10_lvnetwork1.dss  trafo10_lvnetwork1.esdl  trafo10_lvnetwork2.dss  trafo10_lvnetwork2.esdl  (+155 more)
