[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lvnetworkservice"
version = "0.0.1"
authors = [
  { name="Gijs Verhoeven", email="g.verhoeven.1@tue.nl" },
  { name="Leo van Schooten", email="l.g.t.v.schooten@tue.nl" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dots-energy-services/dots-lv-network-service/"
Issues = "https://github.com/dots-energy-services/dots-lv-network-service/issues"
